--- a/cfg/train_real_images.yaml
+++ b/cfg/train_real_images.yaml
@@ -39,7 +39,7 @@ std: 0.26 # brauchen wir std: 0.26
 # noise: [8, 40]
 # bg: 1
 
-gpu: True
+gpu: False
 dir_base: 'result/mini_testdatensatz' # Ordner, in welchem die results gespeichert werden
 dir_dataset: 'dataset/mini_testdatensatz' # Ordner in welchem die traingsbilder und testbilder liegen
 
