--- a/cfg/train_real_images.yaml
+++ b/cfg/train_real_images.yaml
@@ -16,7 +16,7 @@ batch_size: 2 #16 # brauchen wir
 ep_train: 24 #24 # brauchen wir
 #bootstrap: 0.3
 concentrate: -60 # brauchen wir ums höher umso schneller wird LossC zu 0  # alter Wert -20
-inside: 150 # 50,250
+inside: 250 # 50,250
 sigma_kp: [1.0, 2.5] # brauchen wir sigma_kp: [1.0, 2.5]
 #a_dist: -200
 
@@ -40,6 +40,6 @@ std: 0.26 # brauchen wir std: 0.26
 # bg: 1
 
 gpu: False
-dir_base: 'result/mini_testdatensatz' # Ordner, in welchem die results gespeichert werden
-dir_dataset: 'dataset/mini_testdatensatz' # Ordner in welchem die traingsbilder und testbilder liegen
+dir_base: 'result/mini_testdatensatz_cleared' # Ordner, in welchem die results gespeichert werden --> Ändern ist unpraktisch
+dir_dataset: 'dataset/mini_testdatensatz_cleared' # Ordner in welchem die traingsbilder und testbilder liegen
 
