--- a/cfg/color.yaml
+++ b/cfg/color.yaml
@@ -31,7 +31,38 @@
 - [0.89, 0.28, 0.13]  # Rot-Orange
 - [0.89, 0.28, 0.13]  # Rot-Orange
 - [0.89, 0.28, 0.13]  # Rot-Orange
-
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
+- [0.89, 0.28, 0.13]  # Rot-Orange
 
 
 
