--- a/cfg/train_real_images.yaml
+++ b/cfg/train_real_images.yaml
@@ -12,8 +12,8 @@ lr: 0.0001 # brauchen wir # 0.001
 wd: [0.00005] # 0.00005 # Reguliert Gewichte reduziert Overfitting verändert VerlsustfunktionJed größer desteo stärker der Einfluss
 lr_anne: 'repeat' # brauchen wir # repeat
 
-batch_size: 1 #16 # brauchen wir
-ep_train: 1 #24 # brauchen wir
+batch_size: 20 #16 # brauchen wir
+ep_train: 24 #24 # brauchen wir
 #bootstrap: 0.3
 concentrate: -120 # brauchen wir ums höher umso schneller wird LossC zu 0  # alter Wert -20
 inside: 600 # 50,250
@@ -41,8 +41,8 @@ brightness_true: True
 # bg: 1
 
 gpu: True
-dir_base: 'result/dataset_pixel_validation' # Ordner, in welchem die results gespeichert werden --> Ändern ist unpraktisch #result/dataset_large_2023_5_9_cleared_4
-dir_dataset: 'dataset/dataset_pixel_validation' # Ordner in welchem die traingsbilder und testbilder liegen #dataset/dataset_large_2023_5_9_cleared
+dir_base: 'result/dataset_large_2023_5_9_cleared_5' # Ordner, in welchem die results gespeichert werden --> Ändern ist unpraktisch
+dir_dataset: 'dataset/dataset_large_2023_5_9_cleared' # Ordner in welchem die traingsbilder und testbilder liegen
 
 # für Bildgröße 192x192: concentrate: -60, inside: 250, lr: 0.0001
 # für Bildgröße 384x384: concentrate: ..., inside: ...
